# axum-embed-hashed-asset

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: lib.rs
